--- a/agriculture_chatbot/package.json
+++ b/agriculture_chatbot/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "formidable": "^3.5.4",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "react": "19.2.0",
